// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TableHeadMobile DOM rendering renders correctly 1`] = `
<thead>
  <tr
    className="KambiWidget-card-header-border KambiWidget-secondary-header KambiWidget-card-support-text-color mobile-row"
  >
    <th
      className="title"
      colSpan="2"
    >
      Test title
    </th>
    <th
      className="column-picker"
      colSpan={2}
    >
      <DropdownButton
        horizontalAlignment="right"
        onChange={[Function]}
        options={
          Array [
            "Translated: \\"Column group 1\\"",
            "Translated: \\"Column group 2\\"",
          ]
        }
        selected={0}
        verticalAlignment="top"
      />
    </th>
    <th
      className="margin"
    />
  </tr>
  <TableHeadDefaultRow
    columns={
      Array [
        Object {
          "name": "Column 1-1",
          "short": "c11",
        },
        Object {
          "name": "Column 1-2",
          "short": "c12",
        },
      ]
    }
    hiddenMode={false}
    title=""
  />
</thead>
`;

exports[`TableHeadMobile DOM rendering renders correctly when showColumnPicker is false 1`] = `
<thead>
  <tr
    className="KambiWidget-card-header-border KambiWidget-secondary-header KambiWidget-card-support-text-color mobile-row"
  >
    <th
      className="title"
      colSpan="2"
    >
      Test title
    </th>
    <th
      className="column-picker"
      colSpan={2}
    />
    <th
      className="margin"
    />
  </tr>
  <TableHeadDefaultRow
    columns={
      Array [
        Object {
          "name": "Column 1-1",
          "short": "c11",
        },
        Object {
          "name": "Column 1-2",
          "short": "c12",
        },
      ]
    }
    hiddenMode={false}
    title=""
  />
</thead>
`;

exports[`TableHeadMobile DOM rendering renders correctly with initial column group specified 1`] = `
<thead>
  <tr
    className="KambiWidget-card-header-border KambiWidget-secondary-header KambiWidget-card-support-text-color mobile-row"
  >
    <th
      className="title"
      colSpan="2"
    >
      Test title
    </th>
    <th
      className="column-picker"
      colSpan={2}
    >
      <DropdownButton
        horizontalAlignment="right"
        onChange={[Function]}
        options={
          Array [
            "Translated: \\"Column group 1\\"",
            "Translated: \\"Column group 2\\"",
          ]
        }
        selected={1}
        verticalAlignment="top"
      />
    </th>
    <th
      className="margin"
    />
  </tr>
  <TableHeadDefaultRow
    columns={
      Array [
        Object {
          "name": "Column 2-1",
          "short": "c21",
        },
        Object {
          "name": "Column 2-2",
          "short": "c22",
        },
      ]
    }
    hiddenMode={false}
    title=""
  />
</thead>
`;
